fixed sidebar spacing issue

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -3,34 +3,37 @@
     height: 50px;
     padding: 30px 0;
     top: 0px;
-    min-width: 400px;
+    /* min-width: 400px; */
 }
-
+.mobile-nav-links {
+    display: none;
+}
 .nav-links{
-    min-width: 400px;
+     /* min-width: 400px;
+    text-align: center; */
 }
 
 .nav-icons {
     list-style: none;
-    margin-right: 65px;
+    
 }
 
 .twii-icon {
     font-size: 28px;
-    padding-left: 50px;
+    margin-left: 20px;
     margin-bottom: 10px;
 }
 
 .nav-icons li{
     font-size:18px;
     font-weight: 900;
-    padding: 4px 15px;
+    padding: 4px 8px;
     cursor: pointer;
     margin-bottom: 10px;
 }
 
 .nav-icons li:hover{
-    padding: 4px 15px;
+    padding: 4px 8px;
     background: rgba(29, 161, 242, 0.1);
     border-radius: 47px;   
     transition: 4ms;
@@ -104,37 +107,28 @@
 /* small laptops */
 
 @media (max-width: 1024px) {
-    .left-container {
-        min-width: 150px;
+    /* .left-container {
+        max-width: 10px;
         height: 20px;
+    } */
+    .mobile-nav-links {
+        display: block;
+    }
+    .twii-icon {
+        font-size: 22px;
+        margin-left: 18px;
+        margin-bottom: 10px;
+    }
+
+    .mobile-nav-icons {
+        text-align: center;
     }
 
     .nav-links{
-        min-width: 200px;
-    }
-
-
-    .nav-icons {
-        list-style: none;
-        margin-right: 0px;
-    }
-
-    .nav-icons li{
-        font-weight: 900;
-        padding: 4px 10px;
-    }
-
-    .nav-links li .navlink {
-        font-size: 16px;
+        display: none;
     }
 
     .tweet-btn{
-
-        padding: 10px 15px;
-        margin: 25px 20px 50px 0;
-        border-radius: 25px;
-        width: 150px;
-        background: #1D9BF0;
-    
+        display: none;
     }
 }
